<resources>
    <string name="app_name">Nawara Apps</string>
    <string name="cd_logo">Nawara Logo</string>
    <string name="motto">Let\'s Share Your Story and Get Help</string>
    <string name="welcome">welcome</string>
    <string name="start">Let\'s Go !!!</string>
    <string name="swift"><![CDATA[Swipe >>]]></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="copyright">© 2022 Nawara - Capstone Project Bangkit</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="min_length_char">Minimal Length %1$d characters</string>
    <string name="email_hint">Text your email</string>
    <string name="pass_hint">Text your password</string>
    <string name="login_ket">Don\'t have any account ?</string>
    <string name="sample_photo">sample_photo</string>
    <string name="description">description</string>
    <string name="username">username</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="created_at">created at</string>
    <string name="image_login">login picture</string>
    <string name="invalid_email">Format email is invalid!</string>
    <string name="name">Name</string>
    <string name="name_hint">Text your name</string>
    <string name="title_detail_activity">String</string>
    <string name="signup_ket">Already have an account ?</string>
    <string name="home_navbar">home navbar</string>
    <string name="chat_navbar">chat navbar</string>
    <string name="emergency_navbar">emergency navbar</string>
    <string name="consult_navbar">consult navbar</string>
    <string name="profile_navbar">profile navbar</string>
    <string name="tell_us_about_yourself">tell us about yourself</string>
    <string name="save">save</string>
    <string name="create_post_floating_action_button">create post floating action button</string>
    <string name="tell_your_story">tell your story</string>
    <string name="post">post</string>
    <string name="share_location">share location</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="how_s_you_feeling_today">How\'s you felling today</string>
    <string name="enter_comment">enter comment</string>
    <string name="search">search</string>
    <string name="follow">follow</string>
    <string name="following">following</string>
    <string name="img_type">image/*</string>
    <string name="choose_picture">choose picture</string>
    <string name="loc_not_found">location not found</string>
    <string name="author">com.example.capstoneproject.ui.story</string>
    <string name="description_hint">Ceritakan pengalamanmu!</string>
    <string name="upload">Upload</string>
    <string name="permission_denied" translatable="false">Can\'t get permission</string>
    <string name="message_validation">Enter your %1$s</string>
    <string name="upload_story_tittle">Upload Story</string>
    <string name="failure_ket">\"Failure : \"</string>
    <string name="setting_language" translatable="false">Language</string>
    <string name="input_image" translatable="false">Please upload your image first!</string>
    <string name="normal_type">Normal</string>
    <string name="login_image" translatable="false">Login Image</string>
    <string name="satelit_type">Satelit</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="my_loc">My Location</string>
    <string name="maps_location">Location</string>
    <string name="add_story" translatable="false">Add Story</string>
    <string name="floating_action_button_chatrooms">floating action button chatrooms</string>
    <string name="enter_message">enter message</string>
    <string name="logo">logo</string>
    <string name="confirm_password">confirm password</string>
    <string name="already_a_user_login">Already have an account?</string>
    <string name="timeout">Timeout</string>
    <string name="call">call</string>
    <string name="photo">photo</string>
    <string name="password_hint">Text Your Password</string>
    <string name="signup_keterangan">Have Already Account ?</string>
    <string name="tittle_alert">Great</string>
    <string name="message_success_alert">Account successfully created!</string>
    <string name="next">Next!</string>
    <string name="signup_error">Signup failed, please try again!</string>
    <string name="retry">Retry</string>
    <string name="title_hint">Judul Ceritamu!</string>
    <!--    <string name="default_web_client_id">Web Client ID</string>-->
</resources>