<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".ui.signup.SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_signup_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/login_image"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal2"
            app:srcCompat="@drawable/nawara_2" />

        <TextView
            android:id="@+id/tv_signup"
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />

        <TextView
            android:id="@+id/tv_signup_name"
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="@+id/tv_signup"
            app:layout_constraintStart_toStartOf="@+id/tv_signup"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup" />

        <com.example.capstoneproject.customview.MyEditText
            android:id="@+id/edt_signup_name"
            android:alpha="0"
            android:hint="@string/name_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_signup"
            app:layout_constraintStart_toStartOf="@+id/tv_signup"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_name"/>

        <TextView
            android:id="@+id/tv_signup_email"
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="@+id/tv_signup"
            app:layout_constraintStart_toStartOf="@+id/tv_signup"
            app:layout_constraintTop_toBottomOf="@+id/edt_signup_name" />

        <com.example.capstoneproject.customview.MyEmailCustom
            android:id="@+id/edt_signup_email"
            android:alpha="0"
            android:hint="@string/email_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_signup"
            app:layout_constraintStart_toStartOf="@+id/tv_signup"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_email" />

        <TextView
            android:id="@+id/tv_signup_password"
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="@+id/tv_signup"
            app:layout_constraintStart_toStartOf="@+id/tv_signup"
            app:layout_constraintTop_toBottomOf="@+id/edt_signup_email" />

        <com.example.capstoneproject.customview.MyPassCustom
            android:id="@+id/edt_password"
            android:alpha="0"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_signup"
            app:layout_constraintStart_toStartOf="@+id/tv_signup"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_password" />

        <Button
            android:id="@+id/btn_signup"
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_variants"
            android:text="@string/signup"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_signup"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_signup"
            app:layout_constraintTop_toBottomOf="@+id/edt_password" />

        <TextView
            android:id="@+id/tv_ket"
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/signup_keterangan"
            app:layout_constraintStart_toStartOf="@+id/tv_signup"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

        <TextView
            android:id="@+id/tv_login"
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/light_variants"
            app:layout_constraintEnd_toEndOf="@+id/tv_signup"
            app:layout_constraintStart_toEndOf="@+id/tv_ket"
            app:layout_constraintTop_toTopOf="@+id/tv_ket" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.30"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal2"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.05"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <RelativeLayout
            android:id="@+id/view_progressbar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>